# gonanochat

./: .gitignore  README.md  backward.go  checkpoint.go  cli.go  engine.go  go.mod  main.go  model.go  optim.go  pyproject.toml  server.go  tensor.go  tokenizer.go  train.go  train_model.go  ui.go
scripts/: convert.py  prepare_data.py
